# gupnp-dlna

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.gst-convenience  TODO  autogen.sh  configure.ac  gupnp-dlna-1.0-uninstalled.pc.in  gupnp-dlna-1.0.pc.in  gupnp-dlna.doap
data/: Makefile.am  aac.xml  ac3.xml  amr.xml  avc.xml  common.xml  dlna-profiles.rng  jpeg.xml  lpcm.xml  mp3.xml  mpeg-ts.xml  mpeg1.xml  mpeg4.xml  png.xml  wma.xml
doc/: Makefile.am  dlna-profiles-example.xml  gupnp-dlna-docs.sgml  gupnp-dlna-sections.txt  gupnp-dlna.types
gst-convenience/: Makefile.am  gstreamer-discoverer-gupnp-dlna-0.10.deps  gstreamer-discoverer-gupnp-dlna-0.10.vapi  gstreamer-profile-gupnp-dlna-0.10.vapi
gst-convenience/gst-libs/gst/: Makefile.am  gettext.h  gst-i18n-plugin.h
gst-convenience/gst-libs/gst/discoverer/: Makefile.am  gstdiscoverer-enumtypes.c  gstdiscoverer-enumtypes.h  gstdiscoverer-marshal.c  gstdiscoverer-marshal.h  gstdiscoverer-types.c  gstdiscoverer.c  gstdiscoverer.h
gst-convenience/gst-libs/gst/profile/: Makefile.am  gstfactorylists.c  gstfactorylists.h  gstprofile.c  gstprofile.h  gstprofileutils.c  profile-enumtypes.c  profile-enumtypes.h
libgupnp-dlna/: Makefile.am  gupnp-dlna-discoverer.c  gupnp-dlna-discoverer.h  gupnp-dlna-information.c  gupnp-dlna-information.h  gupnp-dlna-load.c  gupnp-dlna-load.h  gupnp-dlna-marshal.list  gupnp-dlna-profile-private.h  gupnp-dlna-profile.c  gupnp-dlna-profile.h  gupnp-dlna-profiles.c  profile-loading.c  profile-loading.h
tests/: Makefile.am  dlna-encoding.c  dlna-profile-parser.c  test-discoverer.sh.in
tests/dlna/xml/: dlna-profile-illegal-parent.xml  dlna-profile-missing-attribute.xml  dlna-profile-parent-order.xml  dlna-profiles-empty.xml  restriction-duplicate.xml  restriction-forward-reference.xml  restrictions-illegal-parent.xml  value-invalid.xml
tests/xml/: dlna-profile-illegal-base.xml  dlna-profiles-restrictions-order.xml  field-no-value.xml  range-invalid.xml  value-empty.xml
tests/xml/duplicate-detection/: dup1.xml  dup2.xml
tools/: Makefile.am  gupnp-dlna-info.c  gupnp-dlna-ls-profiles.c
